--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Admin Dashboard</title>
     <!-- Link to CSS file -->
-    <link rel="stylesheet" href="/css/dashboard.css">
+    <link rel="stylesheet" href="dashboard.css">
 </head>
 <body>
     <header>
