--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,9 +3,13 @@
 /* General styles */
 body {
     font-family: 'Helvetica', 'Arial', sans-serif;
-    background-color: #f7f7f7; /* Light background color */
+    background-color: #2c2424; /* Light background color */
     margin: 0;
     padding: 0;
+}
+
+h1{
+    color: #007bff;
 }
 
 /* Header styles */
