--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,64 +1,48 @@
-/* Dashboard CSS */
-
 /* General styles */
+@import 'node_modules/bootstrap-icons/font/bootstrap-icons.css';
+
 body {
     font-family: 'Helvetica', 'Arial', sans-serif;
-    background-color: #2c2424; /* Light background color */
+    background-color: #f8f9fa; /* Bootstrap light background color */
     margin: 0;
     padding: 0;
 }
 
-h1{
-    color: #007bff;
-}
-
-/* Header styles */
 header {
-    background-color: #007bff; /* Bootstrap blue color */
-    color: white;
+    background-color: #007bff; /* Bootstrap primary blue color */
     padding: 20px;
     text-align: center;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Light shadow for header */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     font-size: 1.5em;
 }
 
-/* Main content styles */
 main {
     padding: 20px;
-    max-width: 1200px; /* Limit width */
-    margin: 0 auto; /* Center the content */
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
-/* Section styles */
-main h2 {
-    margin-top: 30px; /* Add space before each section */
-    color: #333;
+.card {
+    margin-bottom: 20px;
 }
 
-/* Lists */
-main ul {
-    list-style-type: none; /* Remove default list styles */
-    padding: 0;
+.card-title {
+    font-size: 1.5rem;
+    margin-bottom: 15px;
 }
 
-main ul li {
+.list-group-item {
     padding: 10px;
-    border-bottom: 1px solid #ccc; /* Light gray divider between list items */
+    border-bottom: none;
+    transition: background-color 0.3s ease-in-out;
 }
 
-/* Styling list items */
-main ul li:last-child {
-    border-bottom: none; /* Remove border from the last item */
+.list-group-item:hover {
+    background-color: #e9ecef; /* Bootstrap gray color */
 }
 
-/* Additional styles */
 p {
     font-size: 1.1em;
     line-height: 1.5;
     color: #555;
-}
-
-/* Hover effects for list items */
-main ul li:hover {
-    background-color: #f1f1f1; /* Light gray hover effect */
 }
